<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="155sp"
            android:layout_margin="22dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/warm_grey"
            android:textSize="18sp"
            app:fontFamily="sans-serif"
            tools:text="@tools:sample/lorem/random" />
    </LinearLayout>
</ScrollView>