<resources>
    <string name="app_name">Appempresas</string>
    <!-- Strings related to login -->
    <string name="title">BEM-VINDO AO EMPRESAS</string>
    <string name="subtitle">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="search_hint">Pesquisar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-Mail inválido</string>
    <string name="error_invalid_password">Senha Curta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="entrar">ENTRAR</string>
    <string name="error_credentials">Credenciais informadas são inválidas, tente novamente.</string>
    <string name="nenhuma_empresa_foi_encontrada_para_a_busca_realizada">Nenhuma empresa foi encontrada para a busca realizada.</string>
</resources>
